--- a/Major Project/.gitattributes
+++ b/Major Project/.gitattributes
@@ -1,1 +1,2 @@
 Major[[:space:]]Project/node_modules/.cache/default-development/11.pack filter=lfs diff=lfs merge=lfs -text
+Major[[:space:]]Project/node_modules/.cache/default-development/* filter=lfs diff=lfs merge=lfs -text
